# zippy

./: .gitignore  Cargo.toml  README.md  main  nvim.lua  test.z  todo.txt
assess/: main.z  nvim.lua  other.z
assess/inner/: inner.z
crates/backend/: Cargo.toml
crates/common/: Cargo.toml
crates/midend/: Cargo.toml
crates/zippy-backend/: Cargo.toml
crates/zippy-backend/src/: lib.rs  mangle.rs
crates/zippy-backend/src/c/: block.rs  mod.rs  statement.rs  types.rs  value.rs
crates/zippy-common/: Cargo.toml
crates/zippy-common/src/: components.rs  driver.rs  invalid.rs  kinds.rs  lib.rs  literals.rs  names2.rs
crates/zippy-common/src/hir/: mod.rs
crates/zippy-common/src/hir2/: because.rs  coerce.rs  constraint.rs  context.rs  definitions.rs  mod.rs  pretty.rs  tree.rs  types.rs
crates/zippy-common/src/hir2/because/: mod.rs
crates/zippy-common/src/hir2/constraint/: mod.rs
crates/zippy-common/src/message/: compile.rs  kick.rs  lex.rs  mod.rs  parse.rs  resolve.rs  tyck.rs
crates/zippy-common/src/messages/: codes.rs  mod.rs
crates/zippy-common/src/mir/: check.rs  discover.rs  mod.rs  pretty.rs  tree.rs  types.rs
crates/zippy-common/src/names/: mod.rs
crates/zippy-common/src/source/: mod.rs  project.rs
crates/zippy-common/src/thir/: coerce.rs  context.rs  defs.rs  mod.rs  pretty.rs  tree.rs  types.rs
crates/zippy-common/src/thir/constraint/: mod.rs
crates/zippy-frontend/: Cargo.toml
crates/zippy-frontend/src/: ast.rs  checked.rs  flattened.rs  lib.rs  messages.rs  resolved.rs
crates/zippy-frontend/src/check/: apply.rs  bind.rs  bound.rs  constrained.rs  messages.rs  mod.rs  types.rs
crates/zippy-frontend/src/check/generate/: check.rs  infer.rs  mod.rs
crates/zippy-frontend/src/check/solve/: flow.rs  instantiate.rs  mod.rs  types.rs
crates/zippy-frontend/src/clarify/: constrain.rs  dependency.rs  generalize.rs  instanced.rs  instantiate.rs  messages.rs  mod.rs  unify.rs
crates/zippy-frontend/src/components/: dependency.rs  mod.rs
crates/zippy-frontend/src/definitions/: bind.rs  mod.rs
crates/zippy-frontend/src/dependencies/: mod.rs
crates/zippy-frontend/src/flattening/: mod.rs
crates/zippy-frontend/src/kick/: bind.rs  infer.rs  kinds.rs  mod.rs  names.rs  pretty.rs  unify.rs
crates/zippy-frontend/src/lex/: mod.rs  token.rs
crates/zippy-frontend/src/names/: declare.rs  messages.rs  mod.rs  resolve.rs
crates/zippy-frontend/src/parse/: convert.rs  decl.rs  expr.rs  matcher.rs  mod.rs  tree.rs  unconcretify.rs
crates/zippy-frontend/src/parser/: abstraction.rs  cst.rs  messages.rs  mod.rs
crates/zippy-frontend/src/parser/parse/: expr.rs  item.rs  mod.rs
crates/zippy-frontend/src/parser/tokens/: mod.rs  raw.rs  tests.rs
crates/zippy-frontend/src/resolve/: declare_decl.rs  declare_expr.rs  declare_pat.rs  declare_type.rs  mod.rs  path.rs  resolve_decl.rs  resolve_expr.rs  resolve_pat.rs  resolve_type.rs
crates/zippy-frontend/src/resolved/: mod.rs
crates/zippy-frontend/src/tyck/: bind.rs  check.rs  components.rs  dependency.rs  infer.rs  lower.rs  mod.rs  types.rs
crates/zippy-frontend/src/tyck/solve/: mod.rs  unify.rs
crates/zippy-frontend/src/tyck2/: bind.rs  check.rs  constrain.rs  infer.rs  lower.rs  mod.rs
crates/zippy-frontend/src/tyck2/unify/: coercing.rs  equality.rs  mod.rs
crates/zippy-frontend/src/unresolved/: mod.rs
docs/: cli.md  env.md  potential-ideas.md  syntax.abnf
spec/: grammar-v1.abnf
src/: args.rs  compile.rs  console_driver.rs  driver.rs  emit.rs  input.rs  lib.rs  main.rs  meta.rs  output.rs  span.rs  target.rs
zc/: Cargo.toml
zc/src/: declare.rs  inputs.rs  lang.rs  lex.rs  lib.rs  message.rs  name.rs  parse.rs  resolve.rs  scope.rs  source.rs
zc/src/declare/: declarer.rs  decls.rs  scope.rs  tests.rs
zc/src/lex/: comment.rs  number.rs  string.rs  tests.rs  token.rs
zc/src/name/: tests.rs
zc/src/parse/: ast.rs  convert.rs  error.rs  grammar.lalrpop  hir.rs  lower.rs  span.rs
zc/src/resolve/: resolver.rs
zls/: Cargo.toml  language-configuration.json  package.json  tsconfig.json
zls/client/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
zls/client/src/: extension.ts
zls/lsp-test/: test.zs
zls/src/: backend.rs  db.rs  file.rs  lib.rs  main.rs  message.rs
zls/src/db/: change.rs
zls/src/file/: map.rs
zls/syntaxes/: z.tmLanguage.json
(+308 files in other folders)
