[workspace]
members = ["crates/*"]

[package]
name = "corollary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "crates/backend" }
common = { path = "crates/common" }
frontend = { path = "crates/frontend" }
midend = { path = "crates/midend" }

object = { version = "0.29", features = ["write_std"] }
target-lexicon = "0.12"

anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
codespan-reporting = "0.11"
console = "0.15"
env_logger = "0.9"
log = "0.4"
pretty-hex = "0.3"
