[workspace]
members = ["crates/*"]

[package]
name = "zippyc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zippy-backend = { path = "crates/zippy-backend" }
zippy-common = { path = "crates/zippy-common" }
zippy-frontend = { path = "crates/zippy-frontend" }
zippy-midend = { path = "crates/zippy-midend" }

cc = "1.0"
target-lexicon = "0.12"

anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
codespan-reporting = "0.11"
console = "0.15"
env_logger = "0.9"
log = "0.4"
