[workspace]
members = ["crates/*"]

[package]
name = "zippyc"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = 2
lto = "thin"
strip = "symbols"

[[bin]]
name = "zc"
path = "src/main.rs"

[dependencies]
zippy-common = { path = "crates/zippy-common" }
zippy-frontend = { path = "crates/zippy-frontend" }

crossbeam = "0.8"
dashmap = "5.4"
lsp-document = "0.6"
lsp-server = "0.7"
lsp-types = "0.94"
salsa = { git = "https://github.com/salsa-rs/salsa", branch = "master", package = "salsa-2022" }
serde_json = "1.0"

anyhow = "1.0"
crossterm = "0.26"
itertools = "0.10"
log = "0.4"
simple_logger = "4.0"
bimap = "0.6.2"
