[package]
name = "zc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19"

[dependencies]
bimap = "0.6"
lalrpop-util = "0.19"
logos = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
salsa = "0.16.1"
