[package]
name = "zippy-backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zippy-common = { path = "../zippy-common" }

iced-x86 = { version = "1.17", features = ["code_asm"] }
target-lexicon = "0.12"

log = "0.4"
lazy_static = "1.4.0"
