[package]
name = "zippy-common"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6"
malachite = "0.3"
pretty = "0.11"
salsa = { git = "https://github.com/salsa-rs/salsa", branch = "master", package = "salsa-2022" }

log = "0.4"
