[package]
name = "zippy-frontend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zippy-common = { path = "../zippy-common" }

logos = "0.12"
salsa = { git = "https://github.com/salsa-rs/salsa", branch = "master", package = "salsa-2022" }

log = "0.4"
